--- a/index.html
+++ b/index.html
@@ -48,5 +48,16 @@
     </div>
   </section>
 
+  <section id = "sobre">
+    <div id="overlay"></div>
+    <div>
+      <h1>Sobre o Produto</h1>
+    <p>
+      Projetado para profissionais e criadores, o <strong>VisionOne</strong> combina estilo e  tecnologia. Controle sua agenda, veja informações em tempo real e viva  experiências imersivas — tudo ao alcance dos seus olhos.
+    </p>
+    </div>
+    
+  </section>
+
 </body>
 </html>
