ajuster no carrossel

--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@
     
   </section>
   <section id="beneficios">
-    <div>
-      <h2>Benefícios</h2>
-      <div id="lista-beneficios">
-      </div>
+    <h2>Benefícios</h2>
+    <div class="container-beneficios">
+      <div id="lista-beneficios"></div>
     </div>
   </section>
 </body>
