--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script defer src="scripts.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montagu+Slab:opsz,wght@16..144,100..700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -86,7 +87,28 @@
       </div>
     </div>
   </section>
+ <section style="background-color: #111010;" class="depoimentos" id="depoimentos">
+   <style>
+    h2{
+      align-items:center;
+      text-align: center;
+      font-family: 'Montserrat', sans-serif;
+      font-size: 45px;
+    }
+  </style>
+  <h2 style="color:#FFFFFF" class="depoimentotitulo">Depoimentos</h2>
+  <div class="depoimento-container">
+    <div class="depoimento-card">
+      <div class="aspas">❝</div>
+      <p><em>Usei o VisionOne em uma apresentação e foi surreal. Parece mágica!</em></p>
+      <p><em>Lucas</em></p>
+      <span class="cargo">Designer de produto</span>
+    </div>
+    <img src=""images/depoimentos/unsplash_Lgitb85y7-A.svg" " alt="Foto do usuário" class="foto-usuario" />
+  </div>
+</section>
 </body>
+
 <footer>
     <img src="/images/Union.png" alt="Logo">
     <div id="redes-sociais">
