--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <p><em>Lucas</em></p>
       <span class="cargo">Designer de produto</span>
     </div>
-    <img src=""images/depoimentos/unsplash_Lgitb85y7-A.svg" " alt="Foto do usuário" class="foto-usuario" />
+    <img src="c:\Users\Lucas Lira\OneDrive\Área de Trabalho\depoimentos-projeto\images\unsplash_Lgitb85y7-A.svg" alt="Foto do usuário" class="foto-usuario" />
   </div>
 </section>
 </body>
