--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
   </section>
 </body>
 <footer>
-    <img src="/images/Union.png" alt="Logo">
+    <img src="images/Union.png" alt="Logo">
     <div id="redes-sociais">
-      <a href=""><img src="/images/Facebook.png" alt="Facebook"></a>
+      <a href=""><img src="images/Facebook.png" alt="Facebook"></a>
       <a href=""><img src="images/Instagram.png" alt="Instagram"></a>
       <a href=""><img src="images/Youtube.png" alt="Youtube"></a>
       <a href=""><img src="images/twitterX.png" alt="Twitter"></a>
