--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
       <div id="lista-beneficios"></div>
     </div>
   </section>
-<<<<<<< Updated upstream
-=======
+
  <section style="background-color: #111010;" class="depoimentos" id="depoimentos">
    <style>
     h2{
@@ -82,10 +81,20 @@
       <p><em>Lucas</em></p>
       <span class="cargo">Designer de produto</span>
     </div>
-    <img src="C:\Users\Lucas Lira\OneDrive\Área de Trabalho\depoimentos-projeto\images\unsplash_Lgitb85y7-A.svg" alt="Foto do usuário" class="foto-usuario" />
+    <img src="images/unsplash_Lgitb85y7-A.svg" alt="Foto do usuário" class="foto-usuario" /> 
   </div>
+  <div class="depoimento-container"> 
+     <div class="depoimento-card">
+      <div class="aspas">❝</div>
+      <p><em>Trabalho com engenharia e ter dados visíveis no campo mudou meu jogo.</em></p>
+      <p><em>Carla</em></p>
+      <span class="cargo">Engenheira civil</span>
+    </div>
+    <img src="images/unsplash_eqXNp1toYc0.svg" alt="Foto do usuário" class="foto-usuario" /> 
+  </div>
+  </div>
+
 </section>
->>>>>>> Stashed changes
 </body>
 <footer>
     <img src="/images/Union.png" alt="Logo">
