--- a/Formulário/index.html
+++ b/Formulário/index.html
@@ -1,28 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <title>Formulário</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Formulário de Notificação</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <div class="container">
-    <h2>Formulário</h2>
-    <form id="formulario">
-      <label for="nome">Nome:</label>
-      <input type="text" id="nome" placeholder="Digite seu nome..." required>
+    <div class="container">
+        <div class="form-container">
+            <h2>Formulário</h2>
+            <form id="notification-form">
+                <div class="form-group">
+                    <label for="name">Nome:</label>
+                    <input type="text" id="name" name="name" placeholder="Digite seu nome..." required>
+                </div>
+                <div class="form-group">
+                    <label for="email">E-mail</label>
+                    <input type="email" id="email" name="email" placeholder="Digite seu e-mail..." required>
+                </div>
+                <div class="form-group">
+                    <label for="area">Área de atuação:</label>
+                    <input type="text" id="area" name="area" placeholder="Digite sua area de atuação..." required>
+                </div>
+                <button type="submit" class="submit-button">Quero ser notificado</button>
+            </form>
+        </div>
 
-      <label for="email">E-mail:</label>
-      <input type="email" id="email" placeholder="Digite seu E-mail..." required>
+        <div class="stats-container">
+            <div class="stat-badge">500 clientes</div>
+            <div class="stat-badge">95% de aprovação</div>
+        </div>
+    </div>
 
-      <label for="area">Área de atuação:</label>
-      <input type="text" id="area" placeholder="Digite sua área de atuação..." required>
-
-      <button type="submit" class="button">Quero ser notificado</button>
-    </form>
-  </div>
-
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
