ajuste botão home

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 
 
     <div class="botao">
-      <button type="button">Quero ser notificado</button>
+      <a href="#formulario">
+        <button type="button">Quero ser notificado</button>
+      </a>
     </div>
   </section>
   <section id = "sobre">
